# MUSIC2

./: .gitignore  CITATION.bib  CMakeLists.txt  FindFFTW3.cmake  FindTIRPC.cmake  Makefile  Numerics.cc  Numerics.hh  README.md  TransferFunction.hh  bitbucket-pipelines.yml  config_file.hh  constraints.cc  constraints.hh  convolution_kernel.cc  convolution_kernel.hh  cosmology.cc  cosmology.hh  defaults.cc  defaults.hh  densities.cc  densities.hh  fd_schemes.hh  general.hh  ics_example.conf  log.cc  log.hh  main.cc  mesh.hh  mg_interp.hh  mg_operators.hh  mg_solver.hh  output.cc  output.hh  poisson.cc  poisson.hh  random.cc  random.hh  region_generator.cc  region_generator.hh  (+4 more)
.github/workflows/: cmake-multi-platform.yml
data/EAGLE/: Eagle_camb_file.txt
data/ExampleConfigs/: AURIGA6_ics.conf
ext/: class.cmake
ext/panphasia/: generic_lecuyer.f90  panphasia_routines.f
plugins/: HDF_IO.hh  convex_hull.hh  output_arepo.cc  output_art.cc  output_cart.cc  output_enzo.cc  output_gadget2.cc  output_gadget_tetmesh.cc  output_generic.cc  output_grafic2.cc  output_tipsy.cc  output_tipsy_resample.cc  point_file_reader.hh  random_music.cc  region_convex_hull.cc  region_ellipsoid.cc  region_multibox.cc  transfer_bbks.cc  transfer_camb.cc  transfer_eisenstein.cc  transfer_linger++.cc  transfer_music.cc
plugins/boxlib_stuff/: GNUmakefile  Make.package  output_nyx.cpp
src/: Numerics.cc  Numerics.hh  TransferFunction.hh  cmake_config.hh.in  config_file.hh  constraints.cc  constraints.hh  convolution_kernel.cc  convolution_kernel.hh  cosmology.cc  cosmology_calculator.hh  cosmology_parameters.cc  cosmology_parameters.hh  defaults.cc  defaults.hh  densities.cc  densities.hh  density_grid.hh  fd_schemes.hh  general.hh  logger.cc  logger.hh  main.cc  mesh.hh  mg_interp.hh  mg_operators.hh  mg_solver.hh  output.cc  output.hh  perturbation_theory.cc  perturbation_theory.hh  physical_constants.hh  poisson.cc  poisson.hh  random.cc  random.hh  region_generator.cc  region_generator.hh  schemes.hh  solver.hh  (+4 more)
src/math/: interpolate.hh  mat3.hh  ode_integrate.hh  special.hh  vec.hh  vec3.hh
src/plugins/: HDF_IO.hh  convex_hull.hh  output_arepo.cc  output_art.cc  output_cart.cc  output_enzo.cc  output_gadget2.cc  output_gadget2_2comp.cc  output_gadget_tetmesh.cc  output_gamer2.cc  output_generic.cc  output_grafic2.cc  output_swift.cc  output_tipsy.cc  output_tipsy_resample.cc  point_file_reader.hh  random_music.cc  random_music_wnoise_generator.cc  random_music_wnoise_generator.hh  random_panphasia.cc  region_convex_hull.cc  region_ellipsoid.cc  region_multibox.cc  transfer_CLASS.cc  transfer_bbks.cc  transfer_camb.cc  transfer_eisenstein.cc  transfer_eisenstein_suppressLSS.cc  transfer_inflation.cc  transfer_linger++.cc  transfer_music.cc
src/plugins/nyx_plugin/: output_nyx.cpp
tools/: check_output.ipynb  compute_ellipsoid.cc
tools/ramses/: get_music_refmask.f90
